re PR c/35701 (Quieten -Wconversion warnings)

2008-08-20  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR 35701
	* c-common.c (conversion_warning): Do not warn if applying bit-and
	operator to unsigned constant that fits in the target type.
	
testsuite/
	* gcc.dg/pr35701.c: New.
	* gcc.dg/Wconversion-real-integer.c: Add more tests.
	* gcc.dg/Wconversion-pr34389.c: Update.
	* g++.dg/warn/Wconversion-pr34389.C: Update.

From-SVN: r139329